--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,7 @@
 <body>
   <div id="image">
   </div>
+  <script types = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script>$('div').append("<img id='image' src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif'/>");
+  </script>
 </body>
